Fix borders and spacing on board finder form elements
- remove grey glow of focus/selection of buttons
- make select options display the same in firefox and webkit
- fix issue with conflicting classes within why > contours

--- a/_/css/base/_forms.scss
+++ b/_/css/base/_forms.scss
@@ -1,61 +1,67 @@
-/* ==========================================================================
-   BASE/_FORMS.SCSS
-   ========================================================================== */
+// ==========================================================================
+// BASE/_FORMS.SCSS
+// ==========================================================================
 
 // inputs
 .text-input {
-	padding: 5px 2%;
-	background: #fff;
-	color: #666;
-	font-style: italic;
-	font-size: 1em;
-	text-transform: uppercase;
-	outline: none;
-	border: none;
-	border-radius: 0;
-	box-sizing: content-box;
-	font-family: $bodyFont;
+  background: #fff;
+  border: 0;
+  border-radius: 0;
+  box-sizing: content-box;
+  color: #666;
+  font-family: $bodyFont;
+  font-size: 1em;
+  font-style: italic;
+  outline: none;
+  padding: 5px 2%;
+  text-transform: uppercase;
 }
-.submit {
-	padding: 5px;
-	background: #000;
-	color: #fff;
-	font-size: 1em;
-	text-transform: uppercase;
-	text-align: center;
-	font-weight: 700;
-	border: none;
-	cursor: pointer;
-	-webkit-font-smoothing: antialiased;
-	-webkit-appearance: none;
-	border-radius: 0;
-	font-family: $bodyFont;
-}
-.select {
-	font-family: $bodyFont;
-	font-size: 1.25em;
-	font-style: italic;
-	text-transform: uppercase;
-	background: #fff;
-	width: 100%;
-	padding: 10px;
-	line-height: 1;
-	border: 0;
-	border-radius: 0;
-	-webkit-appearance: none;
-	margin-bottom: 10px;
 
-	&.alert {
-		color: #cc0000;
-	}
-	&.hidden {
-		display: none;
-	}
+.submit {
+  -webkit-appearance: none;
+  background: #000;
+  border: 0;
+  border-radius: 0;
+  color: #fff;
+  cursor: pointer;
+  font-family: $bodyFont;
+  font-size: 1em;
+  -webkit-font-smoothing: antialiased;
+  font-weight: 700;
+  padding: 5px;
+  text-align: center;
+  text-transform: uppercase;
 }
-/* Mozilla dosen't style place holders by default */
+
+.select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background: #fff;
+  border: 0;
+  border-radius: 0;
+  font-family: $bodyFont;
+  font-size: 1.25em;
+  font-style: italic;
+  line-height: 1;
+  margin-bottom: 10px;
+  padding: 10px;
+  text-transform: uppercase;
+  width: 100%;
+
+  &.alert {
+    color: #cc0000;
+  }
+
+  &.hidden {
+    display: none;
+  }
+}
+
+// Mozilla dosen't style place holders by default
 input:-moz-placeholder {
-	color: #a9a9a9;
+  color: #a9a9a9;
 }
+
 textarea:-moz-placeholder {
-	color: #a9a9a9;
+  color: #a9a9a9;
 }
